// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decimal-length prop 1`] = `
<div class="buri-submit-bar">
  <div class="buri-submit-bar__bar">
    <div class="buri-submit-bar__text"><span>合计：</span><span class="buri-submit-bar__price">¥<span class="buri-submit-bar__price buri-submit-bar__price--integer">1</span>.1</span></div><button class="buri-button buri-button--danger buri-button--normal buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`disable submit 1`] = `
<div class="buri-submit-bar">
  <div class="buri-submit-bar__bar">
    <div class="buri-submit-bar__text"><span>合计：</span><span class="buri-submit-bar__price">¥<span class="buri-submit-bar__price buri-submit-bar__price--integer">0</span>.01</span></div><button disabled="disabled" class="buri-button buri-button--danger buri-button--normal buri-button--disabled buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`suffix-label prop 1`] = `
<div class="buri-submit-bar">
  <div class="buri-submit-bar__bar">
    <div class="buri-submit-bar__text"><span>Label</span><span class="buri-submit-bar__price">¥<span class="buri-submit-bar__price buri-submit-bar__price--integer">1</span>.11</span><span class="buri-submit-bar__suffix-label">Suffix Label</span></div><button class="buri-button buri-button--danger buri-button--normal buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`text-align prop 1`] = `
<div class="buri-submit-bar">
  <div class="buri-submit-bar__bar">
    <div class="buri-submit-bar__text" style="text-align: left;"><span>合计：</span><span class="buri-submit-bar__price">¥<span class="buri-submit-bar__price buri-submit-bar__price--integer">1</span>.11</span></div><button class="buri-button buri-button--danger buri-button--normal buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`top slot 1`] = `
<div class="buri-submit-bar">top<div class="buri-submit-bar__bar"><button class="buri-button buri-button--danger buri-button--normal buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button></div>
</div>
`;

exports[`without price 1`] = `
<div class="buri-submit-bar">
  <div class="buri-submit-bar__bar"><button class="buri-button buri-button--danger buri-button--normal buri-button--round buri-submit-bar__button buri-submit-bar__button--danger"></button></div>
</div>
`;
